# manoe

./: .env.example  .gitignore  ACHIEVEMENT.md  CLAUDE.md  CODEMAP_CORS_ANALYSIS.md  COMPREHENSIVE_ANALYSIS.md  LICENSE  MANOE_TEST_REPORT.md  README.md  docker-compose.vps.yml  docker-compose.yml  manoe-test-plan.json  mint.json  test-e2e.js  testsprite-config.json
_legacy/: README.md
api-gateway/: .env.example  .eslintrc.js  Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
database/: init.sql
docs/: AGENTS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION_UPDATES.md  NEXT_SESSION_PLAN.md  docs.json
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  (+1 more)
orchestrator/: .env.example  Dockerfile  autogen_orchestrator.py  main.py  multi_agent_worker.py  pyproject.toml
orchestrator/agents/: __init__.py  base.py  narrative_agents.py
orchestrator/config/: __init__.py  llm_providers.py
orchestrator/core/: __init__.py  blackboard.py  evals.py  graph.py  summarization.py  tools.py
orchestrator/models/: __init__.py  schemas.py
orchestrator/prompts/: __init__.py  advanced.py  architect.py  archivist.py  impact.py  originality.py  polish.py  profiler.py  worldbuilder.py  writer.py
orchestrator/services/: __init__.py  model_client.py  qdrant_memory.py  redis_queue.py  research_memory.py  research_service.py  security.py  supabase_persistence.py  tracing.py
orchestrator/tests/: conftest.py  test_blackboard.py  test_summarization.py
(+294 files in other folders)
